--- a/project.html
+++ b/project.html
@@ -37,5 +37,7 @@
         </div>
     </div>
 
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa amet quod adipisci cumque error cum, fuga sint eaque maxime, consequuntur nobis reiciendis, magni vero ipsam tempora fugit voluptates. Quidem, iusto.</p>
+
 </body>
 </html>
