--- a/project.html
+++ b/project.html
@@ -41,5 +41,7 @@
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, quam quas quidem a quisquam alias dicta cumque facilis dignissimos sed officiis tempora nostrum suscipit minima aliquam eius, corrupti temporibus eaque doloremque nemo eos fuga tenetur sunt! Dolore aut quos laudantium.</p>
 
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero repellendus itaque expedita quaerat, error laborum vitae doloribus at deserunt! Delectus aliquam voluptatum impedit omnis, perferendis dolore iste in asperiores nam tempora eaque numquam non dolores praesentium sit aperiam accusantium a. Adipisci quia molestiae veniam unde magni vel tempore deleniti nihil.</p>
+
 </body>
 </html>
