--- a/project.html
+++ b/project.html
@@ -45,5 +45,9 @@
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci, odit et. Nobis itaque quos similique perspiciatis velit provident consequatur libero, repellat excepturi eaque omnis quia earum voluptate veniam dolores suscipit esse sunt maxime error!</p>
 
+    <div class="alu">
+        <h3>this is h3 tag</h3>
+    </div>
+
 </body>
 </html>
